[gd_scene load_steps=8 format=3 uid="uid://bnix23qv7ujm"]

[ext_resource type="FontFile" uid="uid://bkwpyydsxxqbd" path="res://Textures/Font/PublicPixel.otf" id="1_emv3i"]
[ext_resource type="Script" uid="uid://bd5oybb1ycbvk" path="res://Scenes/pause_menu.gd" id="1_k0w1u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k0w1u"]
bg_color = Color(1, 1, 1, 1)
shadow_size = 2
shadow_offset = Vector2(0.5, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1och7"]
bg_color = Color(0.52906674, 0.5290667, 0.5290667, 1)
shadow_size = 2
shadow_offset = Vector2(0.5, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bpi0q"]
bg_color = Color(0.6872149, 0.68721503, 0.6872149, 1)
shadow_size = 2
shadow_offset = Vector2(0.5, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vmyb1"]
bg_color = Color(0.52906674, 0.5290667, 0.5290667, 1)
shadow_size = 2
shadow_offset = Vector2(0.5, 0.5)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_myy0f"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k0w1u")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -130.0
offset_right = 130.0
offset_bottom = 104.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("1_emv3i")
theme_override_font_sizes/font_size = 16
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -194.0
offset_right = 75.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 8

[node name="Return" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_emv3i")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_k0w1u")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1och7")
theme_override_styles/hover = SubResource("StyleBoxFlat_bpi0q")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_vmyb1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_myy0f")
text = "BACK TO GAME"

[node name="Restart" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_emv3i")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_k0w1u")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1och7")
theme_override_styles/hover = SubResource("StyleBoxFlat_bpi0q")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_vmyb1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_myy0f")
text = "RESTART GAME"

[node name="MainMenu" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_emv3i")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_k0w1u")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1och7")
theme_override_styles/hover = SubResource("StyleBoxFlat_bpi0q")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_vmyb1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_myy0f")
text = "MAIN MENU"

[node name="Quit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_emv3i")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_k0w1u")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1och7")
theme_override_styles/hover = SubResource("StyleBoxFlat_bpi0q")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_vmyb1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_myy0f")
text = "QUIT GAME"

[connection signal="pressed" from="VBoxContainer/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
